--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,37 @@
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #D8B4E2;
+}
+
+div {
+  text-align: center;
+}
+
+/* Make the title bigger */
+h1 {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+}
+
+/* Make the dropdown menu bigger */
+select {
+  font-size: 1.25rem;
+  padding: 0.5rem;
+  margin-top: 1rem;
+}
+
+.flag-image {
+  width: 300px;
+  height: 200px;
 }
 
 code {
